tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-missing-field.diagnostic
diagnostic error code=T0001 family=type message="struct match pattern must mention all fields or use '..'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-missing-field.ari" display="tests/cases/match/errors/match-struct-pattern-missing-field.ari" bytes=161
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-missing-field.ari" line=9 column=5 end_line=9 end_column=10 byte_start=120 byte_end=125 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-missing-field.ari:9:5\n   |\n 9 |     Point { x: 1 } => 10,\n   |     ^^^^^"
